[project]
name = "exercises-leetcode"
version = "1.0.0"
authors = [{name = "Alic Znapy", email = "AlicZnapy@gmail.com"},]
requires-python = ">=3.11"

[project.optional-dependencies]
# development dependency groups
dev = [
    "mypy>=1.6.1",
    "pylint>=3.0.2",
    "python-lsp-server[pycodestyle,pydocstyle,mccabe,pyflakes,rope,yapf,autopep8]>=1.10",
    "pylsp-mypy>=0.6.7",
    "spyder-kernels>=2.5",
    "pytest>=8.0.1",
]

[tool.mypy]
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_defs = true

[tool.pylint.'MESSAGES CONTROL']
disable = ["too-few-public-methods",]
