[project]
name = "exercises-leetcode"
version = "1.0.0"
authors = [{name = "Alic Znapy", email = "AlicZnapy@gmail.com"},]
requires-python = ">=3.12"

[project.optional-dependencies]
# development dependency groups
dev = [
    "mypy>=1.14.1",
    "pylint>=3.3.4",
    "pytest>=8.3.4",
]

[tool.mypy]
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_defs = true

[tool.pylint.'MESSAGES CONTROL']
disable = ["too-few-public-methods",]

[tool.pylint.FORMAT]
max-line-length = 79
